--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+##########################################################################################
 # Logs
 logs
 *.log
@@ -31,3 +32,39 @@ node_modules
 
 # Optional REPL history
 .node_repl_history
+
+##########################################################################################
+# OS X Gitignore from https://github.com/github/gitignore/blob/master/Global/OSX.gitignore
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+##########################################################################################
+# Additional ignores
+*.sln
+*.suo
+*.dat
+*.njsproj
+*.swp
